fix: change margin.inline-block-start to var|preset|spacing|30

--- a/web/frontend/src/app/globals.css
+++ b/web/frontend/src/app/globals.css
@@ -39,7 +39,7 @@
 
   /* Alignment */
   --wide: 1280px;
-  --narrow: 645px;
+  --narrow: 720px;
   
   /* Typography */
   --font-sans: var(--roboto), sans-serif;
@@ -101,7 +101,20 @@
 
   :where(.wp-site-blocks) > *:not(:first-child),  
   :where(.constrained) > *:not(:first-child) {
-    @apply space-y-6 space-y-reverse;
+    @apply [margin-block-start:var(--spacing-30)] [margin-block-end:0];
+  }
+
+  :where(.wp-site-blocks) > *:first-child,
+  :where(.wp-site-blocks) > style:first-child + *{
+    @apply [margin-block-start:0];
+  }
+
+  :where(.wp-site-blocks) > *:last-child {
+    @apply [margin-block-end:0];
+  }
+
+  .wp-site-blocks:has(.wp-block-post-content > [style*="padding-bottom"]:last-child) > *:last-child {
+    @apply [margin-block-start:0];
   }
 }
 
